--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": false,
-    "target": "esnext",
+    "target": "es2020",
     "sourceMap": false,
     "rootDir": ".",
     "outDir": "./dist/",
