build(script): publish

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "release": "rimraf ./dist && tsc",
-    "prepublish": "npm version patch && npm run release"
+    "mypublish": "npm version patch && npm run release && npm publish"
   },
   "author": "jw",
   "repository": {
