--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "build": "rimraf ./dist && tsc",
     "release": "rimraf ./dist && tsc",
     "mypublish": "npm version patch && npm run release && npm publish"
   },
