--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "type": "module",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rimraf ./dist && tsc",
-    "release": "rimraf ./dist && tsc",
-    "mypublish": "npm version patch && npm run release && npm publish"
+    "build": "rimraf ./dist && rollup -c",
+    "release": "npm run build",
+    "prepublishOnly": "npm run build"
   },
   "author": "jw",
   "repository": {
@@ -25,8 +26,14 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^15.6.1",
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-typescript": "^8.3.4",
+    "@types/node": "^18.7.9",
+    "@types/node-fetch": "^2.6.2",
     "rimraf": "^3.0.2",
-    "typescript": "^4.3.2"
+    "rollup": "^2.78.1",
+    "rollup-plugin-clear": "^2.0.7",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4"
   }
 }
